# warehouse-system-api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
app/: database.py  exceptions.py  logging_config.py  models.py  schemas.py
app/api/v1/endpoints/: __init__.py  products.py  warehouse_items.py
app/services/: inventory_service.py
tests/: test_endpoints.py
